public/css/index.css
/* Defaults */
:root {
	--font-family: -apple-system, system-ui, sans-serif;
	--font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New, Courier, monospace;
}

/* Theme colors */
:root {
	--color-gray-20: #e0e0e0;
	--color-gray-50: #C0C0C0;
	--color-gray-90: #333;

	--background-color: #fff;

	--text-color: var(--color-gray-90);
	--text-color-link: #082840;
	--text-color-link-active: #5f2b48;
	--text-color-link-visited: #17050F;

	--syntax-tab-size: 2;

	--color-message-box: #ddf3fd;
}

@media (prefers-color-scheme: dark) {
	:root {
		--color-gray-20: #e0e0e0;
		--color-gray-50: #C0C0C0;
		--color-gray-90: #dad8d8;

		/* --text-color is assigned to --color-gray-_ above */
		--text-color-link: #19b1f9;
		--text-color-link-active: #20769e;
		--text-color-link-visited: #20769e;

		--background-color: #111111;

		--color-message-box: #082840;
	}
}


/* Global stylesheet */
* {
	box-sizing: border-box;
	word-wrap: break-word;
}

html,
body {
	padding: 0;
	margin: 0 auto;
	font-family: var(--font-family);
	color: var(--text-color);
	background-color: var(--background-color);
}
html {
	overflow-y: scroll;
}
body {
	max-width: 50rem;
}

/* https://www.a11yproject.com/posts/how-to-hide-content/ */
.visually-hidden {
	clip: rect(0 0 0 0);
	clip-path: inset(50%);
	height: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
	width: 1px;
}

p:last-child {
	margin-bottom: 0;
}
p {
	line-height: 1.5;
}

li {
	line-height: 1.5;
}

a[href] {
	color: var(--text-color-link);
	text-underline-offset: 2px;
}
a[href]:visited {
	color: var(--text-color-link-visited);
}
a[href]:hover,
a[href]:active {
	color: var(--text-color-link-active);
}

main,
footer {
	padding: 1rem;
}
main :first-child {
	margin-top: 0;
}


.links-nextprev {
	display: flex;
	justify-content: space-between;
	gap: .5em 1em;
	list-style: "";
	border-top: 1px dashed var(--color-gray-20);
	padding: 1em 0;
}
.links-nextprev > * {
	flex-grow: 1;
}
.links-nextprev-next {
	text-align: right;
}

header{
	border-bottom: 2px solid color-mix(in srgb, var(--color-gray-90), transparent 75%);
}

table {
	margin: 1em 0;
}
table td,
table th {
	padding-right: 1em;
}

pre,
code {
	font-family: var(--font-family-monospace);
}
pre:not([class*="language-"]) {
	margin: .5em 0;
	line-height: 1.375; /* 22px /16 */
	-moz-tab-size: var(--syntax-tab-size);
	-o-tab-size: var(--syntax-tab-size);
	tab-size: var(--syntax-tab-size);
	-webkit-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
	overflow-x: auto;
}
code {
	word-break: break-all;
}

/* Header */
header {
	display: flex;
	gap: 1em .5em;
	flex-wrap: wrap;
	align-items: center;
	justify-content: space-between;
	padding: 1rem .5rem;
	margin: .5rem 1rem;
}
.site-logo{
	display: inline-flex;
	gap: .5rem;
}

.site-logo a{
	flex-shrink: 0;
}

.site-info{
	align-items: flex-start;
	display: flex;
	flex-direction: column;
	gap: .125rem;
}
.site-info span{
	color: color-mix(in srgb, var(--color-gray-90), transparent 50%);
	font-size: 12px;
}

.home-link {
	display: inline-flex;
	line-height: 1;
	gap: .5rem;
	color: var(--color-gray-90) !important;
	align-items: center;
	justify-content: center;
	font-size: 1rem;
	font-weight: 600;
}
.home-link:link:not(:hover) {
	text-decoration: none;
}
/* Nav */
.nav {
	display: flex;
	padding: 0;
	margin: 0;
	list-style: none;
}
.nav-item {
	display: inline-flex;
	align-items: center;
	margin-right: 1em;
	line-height: 1;
}
.nav-item a[href]:not(:hover) {
	text-decoration: none;
}
.nav a[href][aria-current="page"] {
	text-decoration: underline;
}

/* Posts list */
.postlist {
	list-style: none;
	padding: 0;
	padding-left: 1.5rem;
}
.postlist-item {
	display: flex;
	flex-wrap: wrap;
	align-items: baseline;
	counter-increment: start-from -1;
	margin-bottom: 1em;
}
.postlist-item:before {
	display: inline-block;
	pointer-events: none;
	content: "" counter(start-from, decimal-leading-zero) ". ";
	line-height: 100%;
	text-align: right;
	margin-left: -1.5rem;
}
.postlist-date,
.postlist-item:before {
	font-size: 0.8125em; /* 13px /16 */
	color: var(--color-gray-90);
}
.postlist-date {
	word-spacing: -0.5px;
}
.postlist-link {
	font-size: 1.1875em; /* 19px /16 */
	font-weight: 700;
	flex-basis: calc(100% - 1.5rem);
	padding-left: .25em;
	padding-right: .5em;
	text-underline-position: from-font;
	text-underline-offset: 0;
	text-decoration-thickness: 1px;
}
.postlist-item-active .postlist-link {
	font-weight: bold;
}

/* Tags */
.post-tag {
	display: inline-flex;
	align-items: center;
	justify-content: center;
	text-transform: capitalize;
	font-style: italic;
}
.postlist-item > .post-tag {
	align-self: center;
}

/* Tags list */
.post-metadata {
	display: inline-flex;
	flex-wrap: wrap;
	gap: .5em;
	list-style: none;
	padding: 0;
	margin: 0;
	font-size: 14px;
}

.post-metadata time {
	font-weight: 700;
	margin-right: 1em;
}

.avatar{
	border-radius: 50%;
	height: 32px;
	width: 32px;
}

.cols{
	display: grid;
	grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
	gap: 1em;
	width: 100%;
	max-width: calc(100vw - 2rem);
}

.col{
	width: 100%;
	overflow: hidden;
	max-width: calc(100vw - 2rem);

}

iframe{
	width: 100%;
	max-width: calc(100vw - 2rem);
}

.twitter-tweet{
	max-width: calc(100vw - 2rem) !important;
}

img{
	max-width: 100%;
	height: 100%;
}

code{
	display: block;
	background-color: var(--color-message-box);
	padding: .25rem .5rem;
	border-radius: 8px;
}

ul,ol{
	padding-left: 2rem;
}

main ul li:not(:last-child), main ol li:not(:last-child){
	margin-bottom: .5rem;
}

li::marker{
	color: color-mix(in srgb, var(--color-gray-90), transparent 50%);
	font-weight: 600;
}

/* Post */
h1{
	margin: 0 0 1rem 0;
}

h1 + p.description{
	margin-top: -.5rem;
}

.post-hero{
	border-radius: 8px;
	margin-bottom: 1rem;
}

